--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! my name is pavani............
+    this is my web app
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
