[imad-console] Updates pavani.html

--- a/pavani.html
+++ b/pavani.html
@@ -1,2 +1,16 @@
 <html>
+<head>
+    this is my app
+</head>    
+    <body>
+        <div>
+           hiii 
+        </div>
+        <p>
+            hdui uydhiu wddgw duy
+            dgeud uwyd qquhqujwh
+            ywgiwjdkwdjkwjdkwdjwjdhjh
+            dhdguwkdkiw
+        </p>
+    </body>
 </html>
